components/iot-consumer/manifests/iot-consumer-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: iot-consumer
  name: iot-consumer
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: iot-consumer
    deploymentconfig: iot-consumer
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: iot-consumer
        deploymentconfig: iot-consumer
    spec:
      containers:
      - image: iot-consumer:latest
        imagePullPolicy: Always
        name: iot-consumer
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-consumer
      from:
        kind: ImageStreamTag
        name: iot-consumer:latest
    type: ImageChange
