components/iot-consumer/manifests/iot-consumer-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-consumer
  name: iot-consumer
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: iot-consumer
    weight: 100
  wildcardPolicy: None
